--- a/templates/result.html
+++ b/templates/result.html
@@ -9,12 +9,7 @@
 
 <body>
 
-<form action="/search/" method="GET">
-
-	<input type="text" name="q">
-	<input type="submit" value="Submit" />
-
-</form>
+{{ qstring }}
 
 </body>
 
