--- a/templates/result.html
+++ b/templates/result.html
@@ -9,23 +9,28 @@
 
 <body>
 
-	Artist: {{name}}
-	<p></p>
-	Years active: {{active}}
-	<p></p>
-	Popularity: {{hot}}
-	<p></p>
-	Tunes: 
+	<h3>Artists</h3>
 	<ul>
-		{% for s in songs %}
-		<li>{{s}}</li>
-		{% endfor %}
+	{% for artist in artists %}
+
+		<il>
+			{{artist}}
+		</il>
+		<br>
+
+	{% endfor %}
 	</ul>
-	Similar artists: 
+
+	<h3>Songs</h3> 
 	<ul>
-		{% for a in similar %}
-		<li>{{a}}</li>
-		{% endfor %}
+	{% for song in songs %}
+
+		<il>
+			{{song}}
+		</il>
+		<br>
+
+	{% endfor %}
 	</ul>
 
 </body>
