--- a/templates/song.html
+++ b/templates/song.html
@@ -9,7 +9,19 @@
 
 <body>
 
+	<h3>{{ title }} by {{ artist }} : {{ hot }}</h3>
 
+	<p></p>
+
+	Duration : {{ duration }} seconds.
+
+	<p></p>
+
+	Speechiness : {{ speechiness }}.
+
+	<p></p>
+
+	Tempo : {{ tempo }}}.
 
 </body>
 
