--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,24 @@
 
 <head>
 
-<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+
+    <script src="static/js/bootstrap.min.js"></script>
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/grid.css" rel="stylesheet">
 
 <title>music-search: find something</title>
 
+</head>
+
 <body>
+
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-8" background-color="yellow">.col-xs-12 .col-sm-6 .col-md-8</div>
+        <div class="col-xs-6 col-md-4" background-color="red">.col-xs-6 .col-md-4</div>
+    </div>
+</div>
 
 <form action="/search/" method="GET">
 
