index is purple

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,7 @@
 <head>
 
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-
-    <script src="static/js/bootstrap.min.js"></script>
+   
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/css/grid.css" rel="stylesheet">
 
@@ -15,10 +14,12 @@
 
 <body>
 
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-8" background-color="yellow">.col-xs-12 .col-sm-6 .col-md-8</div>
-        <div class="col-xs-6 col-md-4" background-color="red">.col-xs-6 .col-md-4</div>
+<div id="header" class="row">
+    <div class="col-md-12"><img src="static/img/title.png">f</div>
+</div>
+
+<div id="searchbar" class="row">
+    <div class="col-md-12">f
     </div>
 </div>
 
@@ -29,6 +30,8 @@
 
 </form>
 
+
+    <script src="static/js/bootstrap.min.js"></script>
 </body>
 
 </html>
