--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -1,16 +1,26 @@
-.container {
-  padding-right: 15px;
-  padding-left: 15px;
-}
-
 h4 {
-  margin-top: 25px;
+    margin-top: 25px;
 }
 .row {
-  margin-bottom: 20px;
+  margin-bottom: 0px;
 }
+
+#header {
+    background-color: #1A1A80;
+    line-height: 200px;
+}
+
+#searchbar {
+    background-color: #3333CC;
+    border: 2px solid #000000;
+}
+
+#indexbottom {
+    background-color: #A3A3FF;
+}
+
 .row .row {
-  margin-top: 10px;
+  margin-top: 0px;
   margin-bottom: 0;
 }
 [class*="col-"] {
