--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -1,28 +1,31 @@
+body {
+    padding: 0;
+}
+
+.container-fluid {
+    padding: 0;
+}
+
 h4 {
     margin-top: 25px;
 }
+
 .row {
-  margin-bottom: 0px;
+    height: 100%;
+    display: table-row;
 }
 
 #header {
-    background-color: #1A1A80;
-    line-height: 200px;
-}
-
-#searchbar {
-    background-color: #3333CC;
-    border: 2px solid #000000;
-}
-
-#indexbottom {
-    background-color: #A3A3FF;
+    padding: 20px 0;
+    background: #1A1A80;
 }
 
 .row .row {
-  margin-top: 0px;
-  margin-bottom: 0;
+    margin-top: 0px;
+    margin-bottom: 0;
 }
+
+/*
 [class*="col-"] {
   padding-top: 15px;
   padding-bottom: 15px;
@@ -31,6 +34,7 @@ h4 {
   border: 1px solid #ddd;
   border: 1px solid rgba(86,61,124,.2);
 }
+*/
 
 hr {
   margin-top: 40px;
