--- a/templates/index.html
+++ b/templates/index.html
@@ -8,28 +8,26 @@
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/css/grid.css" rel="stylesheet">
 
-<title>music-search: find something</title>
+<title>audiosearch: find new music</title>
 
 </head>
 
 <body>
 
-<div id="header" class="row">
-    <div class="col-md-12"><img src="static/img/title.png">f</div>
-</div>
+<div class="container-fluid">
 
-<div id="searchbar" class="row">
-    <div class="col-md-12">f
+    <div id="header" class="row-fluid">
+        <div class=".col-lg-12"><img src="static/img/title.png"></div>
     </div>
-</div>
 
-<form action="/search/" method="GET">
+    <form action="/search/" method="GET">
 
-	<input type="text" name="q">
-	<input type="submit" value="Submit" />
+    <input id="searchbar" type="text" name="q">
+    <input type="submit" value="Submit">
 
-</form>
+    </form>
 
+</div> 
 
     <script src="static/js/bootstrap.min.js"></script>
 </body>
