--- a/templates/result.html
+++ b/templates/result.html
@@ -5,7 +5,7 @@
 
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 
-<title>music-search: find something</title>
+<title>audiosearch: find new music</title>
 
 <body>
 
