--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 <div class="container-fluid">
 
     <div id="header" class="row-fluid">
-        <div class=".col-lg-12"><img src="static/img/title.png"></div>
+        <div id="titleimage" class=".col-lg-12"><img src="static/img/title.png"></div>
     </div>
 
     <form action="/search/" method="GET">
