--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -6,37 +6,15 @@ body {
     padding: 0;
 }
 
-h4 {
-    margin-top: 25px;
-}
-
-.row {
-    height: 100%;
-    display: table-row;
-}
-
 #header {
-    padding: 20px 0;
+    height: 150px;
     background: #1A1A80;
+    position: relative;
 }
 
-.row .row {
-    margin-top: 0px;
-    margin-bottom: 0;
-}
-
-/*
-[class*="col-"] {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  background-color: #eee;
-  background-color: rgba(86,61,124,.15);
-  border: 1px solid #ddd;
-  border: 1px solid rgba(86,61,124,.2);
-}
-*/
-
-hr {
-  margin-top: 40px;
-  margin-bottom: 40px;
+#titleimage {
+    position: absolute;
+    bottom: 0;
+    padding-left: 75px;
+    padding-bottom: 5px;
 }
