--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -1,5 +1,6 @@
 body {
     padding: 0;
+    background: #DEDEFF;
 }
 
 .container-fluid {
@@ -7,7 +8,7 @@ body {
 }
 
 #header {
-    height: 150px;
+    height: 250px;
     background: #1A1A80;
     position: relative;
 }
@@ -17,4 +18,22 @@ body {
     bottom: 0;
     padding-left: 75px;
     padding-bottom: 5px;
+}
+
+#searchrow {
+    height: 45px;
+    background: #3333CC;
+    border: 1.5px solid;
+    border-color: black;
+}
+
+#searchbar {
+    width: 250px;
+    height: 30px;
+    margin-top: 7px;
+}
+
+.btn {
+    margin-top: -2px;
+    height: 30.5px;
 }
