--- a/templates/index.html
+++ b/templates/index.html
@@ -17,17 +17,29 @@
 <div class="container-fluid">
 
     <div id="header" class="row-fluid">
-        <div id="titleimage" class=".col-lg-12"><img src="static/img/title.png"></div>
+        <div id="titleimage" class="col-lg-12"><img src="static/img/title.png"></div>
     </div>
 
-    <form action="/search/" method="GET">
+    <div id="searchrow" class="row-fluid">
+        <div class="col-lg-3"></div>
 
-    <input id="searchbar" type="text" name="q">
-    <input type="submit" value="Submit">
+        <div class="col-lg-3">
+            <form action="/search/" method="GET">
+            <input id="searchbar" type="text" name="q">
+            <button type="submit" class="btn btn-default btn-md">
+                <span class="glyphicon glyphicon-play"></span> 
+            </button>
+            </form>
+        </div>
 
-    </form>
+        <div id="one" class="col-lg-1"></div>
 
-</div> 
+        <div id="two"  class="col-lg-1"></div>
+
+        <div id="three"  class="col-lg-1"></div>
+
+    </div><!--END searchrow-->
+</div><!--END container-->
 
     <script src="static/js/bootstrap.min.js"></script>
 </body>
