--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -13,27 +13,45 @@ body {
     position: relative;
 }
 
-#titleimage {
+#title_image {
     position: absolute;
     bottom: 0;
     padding-left: 75px;
     padding-bottom: 5px;
 }
 
-#searchrow {
+#search_row {
     height: 45px;
     background: #3333CC;
     border: 1.5px solid;
     border-color: black;
+
 }
 
-#searchbar {
+#search_bar {
     width: 250px;
     height: 30px;
     margin-top: 7px;
+    margin-left: 50px;
 }
 
 .btn {
     margin-top: -2px;
     height: 30.5px;
+}
+
+.square_space {
+
+}
+
+.col-md-4 {
+    width: 1/3%;
+
+}
+
+.square {
+    width: 400px;
+    height: 400px;
+    border: 1px solid #000;
+
 }
