--- a/templates/index.html
+++ b/templates/index.html
@@ -17,28 +17,41 @@
 <div class="container-fluid">
 
     <div id="header" class="row-fluid">
-        <div id="titleimage" class="col-lg-12"><img src="static/img/title.png"></div>
+        <div id="title_image" class="col-md-12"><img src="static/img/title.png"></div>
     </div>
 
-    <div id="searchrow" class="row-fluid">
-        <div class="col-lg-3"></div>
+    <div id="search_row" class="row-fluid">
+        <div class="col-md-3"></div>
 
-        <div class="col-lg-3">
+        <div class="col-md-3">
             <form action="/search/" method="GET">
-            <input id="searchbar" type="text" name="q">
+            <input id="search_bar" type="text" name="q">
             <button type="submit" class="btn btn-default btn-md">
                 <span class="glyphicon glyphicon-play"></span> 
             </button>
             </form>
         </div>
 
-        <div id="one" class="col-lg-1"></div>
+        <div class="col-md-1"><img src="static/img/compare.png"></div>
 
-        <div id="two"  class="col-lg-1"></div>
+        <div class="col-md-1"><img src="static/img/random.png"></div>
 
-        <div id="three"  class="col-lg-1"></div>
-
+        <div class="col-md-1"><img src="static/img/about.png"></div>
     </div><!--END searchrow-->
+
+    <div class="row-fluid">
+
+        <div class="col-md-4">
+            <div class="square"></div>
+        </div>
+        <div class="col-md-4">
+            <div class="square"></div>
+        </div>
+        <div class="col-md-4">
+            <div class="square"></div>
+        </div>
+
+    </div><!--END square row-->
 </div><!--END container-->
 
     <script src="static/js/bootstrap.min.js"></script>
