--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -40,18 +40,15 @@ body {
     height: 30.5px;
 }
 
-.square_space {
-
-}
-
-.col-md-4 {
-    width: 1/3%;
-
+.center_me {
+    text-align: center;
 }
 
 .square {
-    width: 400px;
-    height: 400px;
-    border: 1px solid #000;
+    margin-top:250px;
+}
 
+canvas { 
+    display:block; 
+    background-color: red;
 }
