changed album matrix to tables, insert with js on page load

--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -52,3 +52,14 @@ canvas {
     display:block; 
     background-color: red;
 }
+
+.cell_img {
+    height:100px;
+    width:100px;
+}
+
+table {
+    margin: 0 auto;
+    position: relative;;
+        border-collapse: collapse;
+}
