--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body onload="initCanvas();">
+<body onload="initMatrix();">
 
 <div class="container-fluid">
 
@@ -41,7 +41,17 @@
 
     <div class="row-fluid">
 
+        <table align="center" id="album_matrix">
+
+            
+
+        </table>
+
+        <!-- OLD CANVAS
+
         <canvas id="album_matrix"></canvas>
+
+         -->
 
         <!-- OLD ALBUM SQUARES IN DIVS
 
