--- a/templates/index.html
+++ b/templates/index.html
@@ -2,20 +2,45 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+<!-- need to give credit for the font...-->
 
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
    
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/css/grid.css" rel="stylesheet">
 
-<title>audiosearch: find new music</title>
+<title>audiosearch</title>
 
 </head>
 
-<body onload="initMatrix();">
+<body>
 
-<div class="container-fluid">
+<div class="container">
 
+    <!--left column-->
+    <div class="row">
+      
+    </div>
+
+    <!--main column-->
+    <div class="row">
+        <div id="index-main-col" class="center-block">
+            <img src="static/img/title.png">
+            <form action="/search/" method="GET">
+            <input id="search_bar" type="text" name="q">
+            <button type="submit" class="btn">
+                <span class="glyphicon glyphicon-play"></span> 
+            </button>
+            </form>
+        </div>
+    </div>
+
+    <!--right column-->
+    <div class="row">
+      
+    </div>
+
+    <!--
     <div id="header" class="row-fluid">
         <div id="title_image" class="col-md-12"><img src="static/img/title.png"></div>
     </div>
@@ -37,8 +62,11 @@
         <div class="col-md-1"><img src="static/img/random.png"></div>
 
         <div class="col-md-1"><img src="static/img/about.png"></div>
-    </div><!--END searchrow-->
+    </div>
 
+    -->
+
+    <!--
     <div class="row-fluid">
 
         <table align="center" id="album_matrix">
@@ -46,6 +74,7 @@
             
 
         </table>
+        -->
 
         <!-- OLD CANVAS
 
@@ -65,7 +94,8 @@
             <div class="square">asdf</div>
         </div> -->
 
-    </div><!--END square row-->
+    <!--END square row-->
+
 </div><!--END container-->
 
     <script src="static/js/jquery-1.11.0.js"></script>
