--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -1,8 +1,8 @@
 body {
-
     background: #343535;
     margin:0; 
     padding:0px; 
+    color:white;
 }
 
 
@@ -106,3 +106,4 @@ a:hover {
 a:active {
     color:white;
 }
+
