--- a/templates/artist.html
+++ b/templates/artist.html
@@ -2,33 +2,57 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+   
+    <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/grid.css" rel="stylesheet">
 
-<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-
-<title>audiosearch: find new music</title>
+    <title>audiosearch</title>
+</head>
 
 <body>
 
-	<h3>{{ name }} : ({{ hot }}) : @{{ twitter }}</h3>
+<div class="container">
 
-	<p></p>
+    <!--left column-->
+    <div class="col-lg-2">
+    </div>
 
-	<h5>Similar artists:</h5>
-	
-	<ul>
-	{% for s in similar %}
+    <!--main column-->
+    <div class="col-lg-8"  class="center-block">
+        <div id="index-main-col">
+            <img src="{{ STATIC_URL }}img/title.png">
+            <h3>{{ name }} : ({{ hot }}) : @{{ twitter }}</h3>
 
-		<il>
-			<a href = {% url 'home.views.artist_info' %}?q={{ s.name.split|join:'+' }} > {{ s }} </a>
-		</il>
-		<br>
+            <p></p>
 
-	{% endfor %}
-	</ul>
-	
-	<!-- control size with a div later -->
-	<img src='{{ image }}'>
+            <h5>Similar artists:</h5>
+            
+            <ul>
+            {% for s in similar %}
 
+                <il>
+                    <a href = {% url 'home.views.artist_info' %}?q={{ s.name.split|join:'+' }} > {{ s }} </a>
+                </il>
+                <br>
+
+            {% endfor %}
+            </ul>
+            
+            <!-- control size with a div later -->
+            <img src='{{ image }}'>
+        </div>
+    </div>
+
+    <!--right column-->
+    <div class="col-lg-2">
+    </div>
+
+</div>
+
+<script src="{{ STATIC_URL }}js/jquery-1.11.0.js"></script>
+<script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
+<script src="{{ STATIC_URL }}js/script.js"></script>
 </body>
 
 </html>
