--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
 
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
    
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/css/grid.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/grid.css" rel="stylesheet">
 
 <title>audiosearch</title>
 
@@ -18,14 +18,13 @@
 <div class="container">
 
     <!--left column-->
-    <div class="row">
-      
+    <div class="col-lg-2">
     </div>
 
     <!--main column-->
-    <div class="row">
-        <div id="index-main-col" class="center-block">
-            <img src="static/img/title.png">
+    <div class="col-lg-8"  class="center-block">
+        <div id="index-main-col">
+            <img src="{{ STATIC_URL }}img/title.png">
 
             <form action="/search/" method="GET">
                 <input id="search_bar" type="text" name="q">
@@ -37,12 +36,12 @@
 
             <!--Button ladder-->
             <div class="row">
-                <div id="trend-ladder" class="col-md-8">
-                    <div id="trend-sticker">
-                        {% for t in trending %}
-                            <a href = {% url 'home.views.artist_info' %}?q={{ t.name.split|join:'+' }} /> {{ t }}  <br />
-                        {% endfor %}
-                    </div>
+                <div id="trend-sticker" class="col-md-8">
+                    <img src="{{ STATIC_URL }}img/trending.png">
+                    <br />
+                    {% for t in trending %}
+                        <a href = {% url 'home.views.artist_info' %}?q={{ t.name.split|join:'+' }} /> {{ t }}  <br />
+                    {% endfor %}
                 </div>
 
                 <div class="col-md-6">
@@ -53,8 +52,7 @@
     </div>
 
     <!--right column-->
-    <div class="row">
-      
+    <div class="col-lg-2">
     </div>
 
     <!--
@@ -115,9 +113,9 @@
 
 </div><!--END container-->
 
-    <script src="static/js/jquery-1.11.0.js"></script>
-    <script src="static/js/bootstrap.min.js"></script>
-    <script src="static/js/script.js"></script>
+<script src="{{ STATIC_URL }}js/jquery-1.11.0.js"></script>
+<script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
+<script src="{{ STATIC_URL }}js/script.js"></script>
 </body>
 
 </html>
