--- a/templates/result.html
+++ b/templates/result.html
@@ -2,10 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+   
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/grid.css" rel="stylesheet">
 
-<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-
-<title>audiosearch: find new music</title>
+    <title>audiosearch</title>
+</head>
 
 <body>
 
