--- a/templates/index.html
+++ b/templates/index.html
@@ -18,100 +18,57 @@
 <div class="container">
 
     <!--left column-->
-    <div class="col-lg-2">
+    <div class="col-lg-1">
     </div>
 
     <!--main column-->
-    <div class="col-lg-8"  class="center-block">
-        <div id="index-main-col">
-            <img src="{{ STATIC_URL }}img/title.png">
+    <div id="index-main-col" class="col-lg-10">
+        <div id="index-header" class="row red">
 
-            <form action="/search/" method="GET">
-                <input id="search_bar" type="text" name="q">
+            <!--title block-->
+            <div id="title-block" class="col-lg-4 red">
+                <img src="{{ STATIC_URL }}img/title.png">
 
-                <!--
-                <button type="submit" class="btn">
-                    <span class="glyphicon glyphicon-play"></span> 
-                </button>
-                -->
-            </form>
+                <form action="/search/" method="GET">
+                    <input id="search-bar" type="text" name="q">
+                </form>
+            </div><!--END title block-->
 
-            <!--Button ladder-->
-            <div class="row">
-                <div id="trend-sticker" class="col-md-8">
-                    <img src="{{ STATIC_URL }}img/trending.png">
-                    <br />
+            <!--summary block-->
+            <div id="summary-block" class="col-lg-8 green ">
+                audiosearch is a simple way to find new music.<br />
+                <span class="glyphicon glyphicon-play"></span> Search for your favorite song and artist to be directed to related media.<br />
+                <span class="glyphicon glyphicon-play"></span> Compare two songs or two artists.<br />
+            </div>
+            <!--END summary block -->
+        </div>
+
+        <div id="index-content" class= "row blue">
+            
+            <!--trending block-->
+            <div id="trending-block" class="col-lg-4 orange">
+                <img src="{{ STATIC_URL }}img/trending.png"> <br />
                     {% for t in trending %}
                         <a href = {% url 'home.views.artist_info' %}?q={{ t.name.split|join:'+' }} /> {{ t }}  <br />
                     {% endfor %}
-                </div>
+            </div><!--END trending block-->
 
-                <div class="col-md-6">
+            <!--misc block-->
+            <div id="misc-block" class="col-lg-4 yellow">
+                <img src="{{ STATIC_URL }}img/compare.png"> <br />
+            </div><!--END block-->
 
-                </div>
-            </div><!--END button ladder-->
+            <!--random-block-->
+            <div id="random-block" class="col-lg-4 purple">
+                <img src="{{ STATIC_URL }}img/featured.png"> <br />
+            </div><!--random-block-->
+
         </div>
     </div>
 
     <!--right column-->
-    <div class="col-lg-2">
+    <div class="col-lg-1">
     </div>
-
-    <!--
-    <div id="header" class="row-fluid">
-        <div id="title_image" class="col-md-12"><img src="static/img/title.png"></div>
-    </div>
-
-    <div id="search_row" class="row-fluid">
-        <div class="col-md-3"></div>
-
-        <div class="col-md-3">
-            <form action="/search/" method="GET">
-            <input id="search_bar" type="text" name="q">
-            <button type="submit" class="btn btn-default btn-md">
-                <span class="glyphicon glyphicon-play"></span> 
-            </button>
-            </form>
-        </div>
-
-        <div class="col-md-1"><img src="static/img/compare.png"></div>
-
-        <div class="col-md-1"><img src="static/img/random.png"></div>
-
-        <div class="col-md-1"><img src="static/img/about.png"></div>
-    </div>
-
-    -->
-
-    <!--
-    <div class="row-fluid">
-
-        <table align="center" id="album_matrix">
-
-            
-
-        </table>
-        -->
-
-        <!-- OLD CANVAS
-
-        <canvas id="album_matrix"></canvas>
-
-         -->
-
-        <!-- OLD ALBUM SQUARES IN DIVS
-
-        <div class="col-md-4 center_me">
-            <div class="square">asdf</div>
-        </div>
-        <div class="col-md-4 center_me">
-            <div class="square">asdf</div>
-        </div>
-        <div class="col-md-4 center_me">
-            <div class="square">asdf</div>
-        </div> -->
-
-    <!--END square row-->
 
 </div><!--END container-->
 
