--- a/templates/index.html
+++ b/templates/index.html
@@ -60,8 +60,7 @@
             <!--misc block-->
             <div id="misc-block" class="col-lg-4 blue">
                 <img src="{{ STATIC_URL }}img/compare.png"> <br />
-                Search for two artists or songs to see a visual representation of their differences.  Artist comparisons involve popularity, average song length, music type, etc.  
-                Song comparisons involve mapping tempo, frequency, etc on a graph. </br>
+                Search for two artists or songs to see a visual representation of their differences.</br>
                 <a href = {% url 'home.views.compare' %}>Try it.</a>
             </div><!--END block-->
 
