--- a/templates/index.html
+++ b/templates/index.html
@@ -87,10 +87,10 @@
             <div id="index-w-separator" class="col-lg-1">
             </div>
 
-            <!--misc block-->
-            <div id="misc-block" class="col-lg-3 box">
+            <!--compare block-->
+            <div id="compare-block" class="col-lg-3 half-box">
                 <!--<img src="{{ STATIC_URL }}img/compare.png"> <br />-->
-                Search for two artists or songs to see a visual representation of their differences.</br></br></br></br>
+                Search for two artists or songs to see a visual representation of their differences.</br>
                 <!--<a href = {% url 'home.views.compare' %}>Try it.</a>-->
 
                 <div class="box-footer">
@@ -98,8 +98,19 @@
                 </div>
             </div><!--END block-->
 
+            <div id="index-w-separator" class="col-lg-1">
+            </div>
 
+            <!--misc block-->
+            <div id="about-block" class="col-lg-3 half-box">
+                <!--<img src="{{ STATIC_URL }}img/compare.png"> <br />-->
+                Search for two artists or songs to see a visual representation of their differences.</br>
+                <!--<a href = {% url 'home.views.compare' %}>Try it.</a>-->
 
+                <div class="box-footer">
+                    about
+                </div>
+            </div><!--END block-->
         </div>
     </div>
 
