--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -9,6 +9,10 @@ body {
     background: blue;
 }
 
+.yellow {
+    background: yellow;
+}
+
 .container {
     height: 100%;
 }
@@ -30,17 +34,18 @@ body {
 
 #artist-result-block {
     background: #990033;
+    padding: 10px;
 }
 
 #song-result-block {
     background: #990033;
+    padding: 10px;
 }
 
 .box {
     border-style: solid;
     border-width: 1px;
     border-color: white;
-    height: 300px;
 }
 
 .half-box {
@@ -61,16 +66,27 @@ body {
 }
 
 #index-w-separator {
-    width: 15px;
+    width: 5px;
 }
 
 .content-h-separator {
     height: 5px;
 }
 
+.content-w-separator {
+    width: 5px;
+    padding: 0;
+
+}
+
 #index-header {
     height: 100px;
     background: #151515;
+}
+
+.center {
+    width: 1000px;
+    margin: 0 auto;
 }
 
 #summary-block {
@@ -115,10 +131,6 @@ body {
     color:black;
 }
 
-#featured-artist {
-    font-size: 25px;
-}
-
 a:link {
     color:white;
 }
@@ -135,3 +147,28 @@ a:active {
     color:white;
 }
 
+.subtitle-text {
+    font-size: 25px;
+}
+
+.nav-button {
+    width: 196px;
+    height: 40px;
+    position: relative;
+}
+
+/*credit to stackoverflow*/
+.nav-link {
+    position:absolute; 
+    width:100%;
+    height:100%;
+    top:0;
+    left: 0;
+
+    /* edit: added z-index */
+    z-index: 1;
+
+    /* edit: fixes overlap error in IE7/8, 
+     make sure you have an empty gif */
+    background-image: url('empty.gif');
+}
